fix: auth service swagger docs
